Added random masternode order and retries