@@ -3,6 +3,8 @@ package io.lamden.api;
 import lombok.extern.slf4j.Slf4j;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -10,14 +12,14 @@ import java.util.List;
 @Slf4j
 public class MainNet implements Network{
 
-    private List<URL> masternodes = new ArrayList<>();
+    private List<URI> masternodes = new ArrayList<>();
 
     public MainNet() {
         try {
-            masternodes.add(new URL("https://masternode-01.lamden.io"));
-            masternodes.add(new URL("https://masternode-02.lamden.io"));
-        } catch (MalformedURLException e) {
-            throw new IllegalArgumentException("No valid url for masternode");
+            masternodes.add(new URI("https://masternode-01.lamden.io"));
+            masternodes.add(new URI("https://masternode-02.lamden.io"));
+        } catch (URISyntaxException e) {
+            throw new IllegalArgumentException("No valid URI for masternode");
         }
     }
 
@@ -27,12 +29,12 @@ public class MainNet implements Network{
     }
 
     @Override
-    public List<URL> getMasterNodes() {
+    public List<URI> getMasterNodes() {
         return masternodes;
     }
 
     @Override
-    public void setMasterNodes(List<URL> masternodes) {
+    public void setMasterNodes(List<URI> masternodes) {
         this.masternodes = masternodes;
     }
 
