@@ -1,18 +1,20 @@
 package io.lamden.api;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
 public class TestNet implements Network {
 
-    private List<URL> masternodes = new ArrayList<>();
+    private List<URI> masternodes = new ArrayList<>();
 
     public TestNet() {
         try {
-            masternodes.add(new URL("https://testnet-master-1.lamden.io"));
-        } catch (MalformedURLException e) {
+            masternodes.add(new URI("https://testnet-master-1.lamden.io"));
+        } catch (URISyntaxException e) {
             throw new IllegalArgumentException("No valid url for masternode");
         }
     }
@@ -23,12 +25,12 @@ public class TestNet implements Network {
     }
 
     @Override
-    public List<URL> getMasterNodes() {
+    public List<URI> getMasterNodes() {
         return masternodes;
     }
 
     @Override
-    public void setMasterNodes(List<URL> masternodes) {
+    public void setMasterNodes(List<URI> masternodes) {
         this.masternodes = masternodes;
     }
 
